Fix badge for dark mode (#223)

--- a/apps/audius-client/packages/web/src/containers/user-badges/ProfilePageBadge.module.css
+++ b/apps/audius-client/packages/web/src/containers/user-badges/ProfilePageBadge.module.css
@@ -13,7 +13,8 @@
 
 .isCompact {
   border-radius: 8px;
-  box-shadow: 0px 2px 5px -2px rgba(133, 129, 153, 0.25), 0px 1px 0px -2px rgba(227, 227, 227, 1), 0px 0px 1px -2px rgba(133, 129, 153, 0.1);
+  background-color: var(--profile-page-badge);
+  box-shadow: var(--profile-page-badge-shadow);
   justify-content: center;
 }
 
@@ -25,6 +26,7 @@
 
 .isCompact.container .text {
   align-items: flex-start;
+  margin-right: 8px;
 }
 
 .container:hover{
